--- a/src/app/features/pages/profileEdition/form-ProfileEdition/form-ProfileEdition.component.scss
+++ b/src/app/features/pages/profileEdition/form-ProfileEdition/form-ProfileEdition.component.scss
@@ -56,9 +56,25 @@
                     }
                 }
 
-
-
             }
+
+
+            .fieldset-disabled {
+                border-color: #eee;
+
+                legend {
+                    color: #999;
+                }
+
+                .ng-input[readonly] {
+                    border: none !important;
+                    color: #777 !important;
+                    background-color: transparent !important;
+                    caret-color: transparent;
+                    pointer-events: none;
+                }
+            }
+
 
             .ng-listForm {
                 display: flex;
@@ -176,6 +192,7 @@
         }
 
 
+
         .ng-btn {
             width: 100%;
             height: 35px;
@@ -207,6 +224,8 @@
 
 }
 
+
+
 // 
 @media screen and (min-width:769px) {
     .ng-main {
@@ -224,4 +243,5 @@
             }
         }
     }
+
 }
