--- a/src/app/features/pages/categorias/categorias.component.html
+++ b/src/app/features/pages/categorias/categorias.component.html
@@ -1,8 +1,8 @@
-    <div class="main">
-        <div class="header">
+    <div class="area-loja">
+    <div class="header">
             <app-header [carrinho]="true" class="s" [admin]="false"></app-header>
         </div>
-
+    <div class="main">
         <app-mobile-navbar></app-mobile-navbar>
         <div class="ng-categoria">
             <section class="container-area">
@@ -32,4 +32,5 @@
         </div>
             <app-footer [footerActive]="true"></app-footer>
 
+    </div>
     </div>
