--- a/src/app/shared/component/carrossel/carrossel.component.scss
+++ b/src/app/shared/component/carrossel/carrossel.component.scss
@@ -2,35 +2,32 @@
     margin: 0;
     padding: 0;
     overflow: hidden;
+    background-color: #b8b4a6;
+    border-radius: 2px;
 
     .slide_area {
         width: 400%;
         display: flex;
+        height: 280px;
+
 
         input {
             display: none;
         }
 
         .slide {
+            background-color: #b8b4a6;
+
+            height: 100%;
             width: 25%;
-            height: 290px;
-            transition: all 2s ease-in;
+            transition: all 1s ease-in-out;
             display: flex;
             justify-content: center;
             align-items: center;
-
-            img {
-                width: 100%;
-            }
-
             .slide_text {
-                background-image: url("https://img.cdndsgni.com/preview/10109390-m.jpg");
-                background-position: center;
-                background-size: contain;
-                background-repeat: no-repeat;
-                background-position: top center;
                 width: 100%;
-                height: 100%; /* altura proporcional à tela */
+                height: 100%;
+                /* altura proporcional à tela */
                 display: flex;
                 flex-direction: column;
                 justify-content: center;
@@ -40,6 +37,7 @@
 
                 img {
                     width: 100%;
+                    object-fit: cover;
                 }
 
                 h2 {
@@ -84,6 +82,7 @@
         #radio3:checked~.first {
             margin-left: -50%;
         }
+
         #radio4:checked~.first {
             margin-left: -75%;
         }
@@ -151,9 +150,11 @@
 #radio3:checked~.slide_checked .checked3 {
     background-color: rgb(51, 50, 50);
 }
+
 #radio4:checked~.slide_checked .checked4 {
     background-color: rgb(51, 50, 50);
 }
+
 @media screen and (max-width:900px) {
     .figure {
         // display: none;
