--- a/src/app/shared/component/carrossel/carrossel.component.scss
+++ b/src/app/shared/component/carrossel/carrossel.component.scss
@@ -2,42 +2,47 @@
     margin: 0;
     padding: 0;
     overflow: hidden;
-    background-color: #b8b4a6;
-    border-radius: 2px;
 
     .slide_area {
         width: 400%;
         display: flex;
-        height: 280px;
-
 
         input {
             display: none;
         }
 
         .slide {
-            background-color: #b8b4a6;
-
-            height: 100%;
             width: 25%;
-            transition: all 1s ease-in-out;
+            height: 290px;
+            transition: all 2s ease-in;
             display: flex;
             justify-content: center;
             align-items: center;
-            .slide_text {
+
+            img {
+                object-fit: cover;
                 width: 100%;
                 height: 100%;
-                /* altura proporcional à tela */
+            }
+
+            .slide_text {
+               
+                background-repeat: no-repeat;
+                background-position: top center;
+                width: 100%;
+                height: 100%; /* altura proporcional à tela */
                 display: flex;
                 flex-direction: column;
                 justify-content: center;
                 align-items: center;
                 padding: 20px 10px;
                 text-align: center;
+                                    background-color: red;
+                                    border-radius: 5px;
+
 
                 img {
                     width: 100%;
-                    object-fit: cover;
                 }
 
                 h2 {
@@ -47,6 +52,7 @@
                     color: #b8b4a6;
                     margin: 0;
                     padding: 0;
+                    background-color: red;
                 }
 
                 h4 {
@@ -82,7 +88,6 @@
         #radio3:checked~.first {
             margin-left: -50%;
         }
-
         #radio4:checked~.first {
             margin-left: -75%;
         }
@@ -150,11 +155,9 @@
 #radio3:checked~.slide_checked .checked3 {
     background-color: rgb(51, 50, 50);
 }
-
 #radio4:checked~.slide_checked .checked4 {
     background-color: rgb(51, 50, 50);
 }
-
 @media screen and (max-width:900px) {
     .figure {
         // display: none;
