--- a/src/app/shared/component/opcoes-categoria/opcoes-categoria.component.html
+++ b/src/app/shared/component/opcoes-categoria/opcoes-categoria.component.html
@@ -3,5 +3,5 @@
     <div class="ng-logo-item">
         <img [src]="url" alt="">
     </div>
-    <small class="titulo">Nome</small>
+    <small class="titulo">{{name}}</small>
 </section>
