--- a/src/app/shared/component/opcoes-categoria/opcoes-categoria.component.html
+++ b/src/app/shared/component/opcoes-categoria/opcoes-categoria.component.html
@@ -1,6 +1,6 @@
 
-<section class="ng-itens-container">
-    <div class="ng-logo-item">
+<section class="ng-itens-container" >
+    <div class="ng-logo-item" (click)="navigate()">
         <img [src]="url" alt="">
     </div>
     <small class="titulo">{{name}}</small>
