criando rota detalhes pedidos

--- a/src/app/shared/component/utius/utius.component.html
+++ b/src/app/shared/component/utius/utius.component.html
@@ -1,4 +1,4 @@
-<div class="banner">
+<div class="banner" (click)="detalhes()">
     <figure class="img">
         <img [src]="imagem" alt="">
     </figure>
