--- a/src/app/shared/component/mais-postados/mais-postados.component.html
+++ b/src/app/shared/component/mais-postados/mais-postados.component.html
@@ -20,16 +20,9 @@
    
 
     <div class="scroll-container" #scrollContainer>
-      <app-utius [titulo]="titulo2" [imagem]="imagem"></app-utius >
-      <app-utius [titulo]="titulo3" [imagem]="imagem"></app-utius>
-      <app-utius [titulo]="titulo4" [imagem]="imagem"></app-utius>
-      <app-utius [titulo]="titulo5" [imagem]="imagem"></app-utius>
-      <app-utius [titulo]="titulo6" [imagem]="imagem"></app-utius>
-      <app-utius [titulo]="titulo2" [imagem]="imagem"></app-utius>
-      <app-utius [titulo]="titulo5" [imagem]="imagem"></app-utius>
-      <app-utius [titulo]="titulo3" [imagem]="imagem"></app-utius>
+      @for (item of produto; track $index) {
+          <app-utius [titulo]="item.productName" [price]="item.price" [imagem]="item.imgUrl"></app-utius >
+      }      
     </div>
-
-    
   </div>
 </app-modal>
