--- a/src/app/shared/component/utius/utius.component.html
+++ b/src/app/shared/component/utius/utius.component.html
@@ -7,7 +7,7 @@
     <div class="ng-infor">
         <div class="ng-infor-price">
             <span>R$</span>
-            <small>17.80 no pix </small>
+            <small>{{price}} no pix </small>
         </div>
         <div class="ng-infor-cred">
             <small>Ou até 3x no cartão </small>
