--- a/src/app/shared/component/utius/utius.component.scss
+++ b/src/app/shared/component/utius/utius.component.scss
@@ -17,10 +17,9 @@
         font-weight: 350;
     }
     cursor: pointer;
-    figure img{
+     img{
         width: 200px;
         height: 150px;
-        flex: 0 0 auto;
         object-fit: cover;
     }
     .ng-infor{
