--- a/src/app/shared/component/carrossel/carrossel.component.scss
+++ b/src/app/shared/component/carrossel/carrossel.component.scss
@@ -13,7 +13,7 @@
 
         .slide {
             width: 25%;
-            height: 290px;
+            height: 260px;
             transition: all 2s ease-in;
             display: flex;
             justify-content: center;
@@ -37,7 +37,7 @@
                 align-items: center;
                 padding: 20px 10px;
                 text-align: center;
-                                    background-color: red;
+                                    background-color: rgb(13, 12, 49);
                                     border-radius: 5px;
 
 
