criando tela de detathes produtos

--- a/src/app/features/pages/loja/loja.component.html
+++ b/src/app/features/pages/loja/loja.component.html
@@ -9,7 +9,7 @@
   </div> -->
 
   <div class="imagem-principal">
-    <img [src]="imagemSelecionada || produto.imgProduct" alt="Imagem principal" />
+    <img [src]=" produto?.imgProduct" alt="Imagem principal" />
   </div>
 
   <div class="informacoes">
