--- a/src/app/features/pages/home/header/header.component.scss
+++ b/src/app/features/pages/home/header/header.component.scss
@@ -1,3 +1,13 @@
+:host {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  
+}
+
+.demo-section .demo-section {
+  margin-top: 16px;
+}
 .ng-header {
     width: 100%;
     display: flex;
@@ -115,21 +125,46 @@
     .ng-checkout {
         display: flex;
         align-items: center;
-        padding: 0 10px;
-        height: 100%;
         gap: 0 15px;
+        height: 100%;
         cursor: pointer;
+        .carrinho{
+            display: flex;
+            align-items: center;
+            justify-content: center;
+                position: relative;
+                width: 30%;
+                height: 100%;
+                .toggle-ico{
+                    display: flex;
+                    align-items: center;
+                    justify-content: center;
+                    background-color: red;
+                    position: absolute;
+                    top: 0;
+                    right:0;
+                    width:15px ;
+                    height:15px ;
+                    border-radius: 100%;
+                    font-size: 10px;
+                    font-weight: 600;
+                    margin-top: 8px;
+
+                }
+                mat-icon{
+                    font-size: 24px;
+                }
+            }
 
         .mat-icon {
             color: #fff;
         }
 
         .ng-btn-empresas {
+            display: flex;
             width: 160px;
-            height: 100%;
-            font-size: 16px;
-            align-content: center;
-            text-align: center;
+            font-size: 14px;
+            justify-content: center;
             color: #ddd;
             cursor: pointer;
         }
@@ -260,3 +295,5 @@
         }
     }
 }
+
+
