--- a/src/app/features/pages/home/carrinho/carrinho.component.html
+++ b/src/app/features/pages/home/carrinho/carrinho.component.html
@@ -2,12 +2,39 @@
     <div class="container-int" (click)="filhoClicado($event)">
         <div class="container-header">
             <button class="btn" mat-flat-button>
-                 <mat-icon (click)="desabiledCar()">close</mat-icon>
+                <mat-icon (click)="desabiledCar()">close</mat-icon>
             </button>
-             <h1>Meu Carrinho</h1>
+            <h1>Meu Carrinho</h1>
         </div>
         <div class="container-infor-produto">
-            Colocar informações do produto
+            <section>
+                Colocar informações do produto
+                <div class="th">/</div>
+                <div class="th">/</div>
+
+                <div class="th">/</div>
+                <div class="th">/</div>
+                <div class="th">/</div>
+                <div class="th">/</div>
+                <div class="th">/</div>
+
+                <div class="th">/</div>
+
+                <div class="th">/</div>
+
+                <div class="th">/</div>
+
+
+            </section>
+
+        </div>
+        <div class="btn-compras">
+            <div class="valor">
+                <span>Subtotal</span>
+                <small>Valor 120222</small>
+            </div>
+
+            <button>Finalizar compras</button>
         </div>
     </div>
 </section>
