--- a/src/app/features/pages/home/carrinho/carrinho.component.scss
+++ b/src/app/features/pages/home/carrinho/carrinho.component.scss
@@ -1,4 +1,4 @@
-.container{
+.container {
     display: flex;
     align-items: center;
     justify-content: flex-end;
@@ -8,42 +8,95 @@
     top: 0;
     left: 0;
     width: 100%;
-    height: 100vh;
-    .container-int{
+    height: 100%;
+
+    .container-int {
         width: 480px;
         background-color: #FFF;
         height: 100%;
-        .container-header{
+        position: relative;
+
+        .container-header {
             display: flex;
             padding: 5px 2px;
             align-items: center;
-             border-bottom: 2px solid #e6e6e6;
-               box-shadow: 0 2px 6px rgba(0, 0, 0, 0.06); // sombra bem leve
-            .btn{
+            border-bottom: 2px solid #e6e6e6;
+            box-shadow: 0 2px 6px rgba(0, 0, 0, 0.06); // sombra bem leve
+
+            .btn {
                 display: flex;
                 align-items: center;
                 justify-content: center;
-            
+
             }
 
-            h1{
-                flex: 1;
+            h1 {
                 text-align: center;
                 margin-right: 25px;
-               font-weight: 700; 
-                font-size: 1.5rem;  
+                font-weight: 700;
+                font-size: 1.5rem;
                 font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-                 color: #222222;
+                color: #222222;
 
             }
         }
-        .container-infor-produto{
+
+        .container-infor-produto {
+
+            section {
+
+
+                padding: 10px;
+
+                display: flex;
+                flex-direction: column;
+                background-color: #f2f2f2;
+                overflow-y: scroll;
+
+                .th {
+                    margin: 10px 0;
+                    width:100%;
+                    height: 150px;
+                    background-color: rgb(240, 237, 237);
+                }
+            }
+
+        }
+
+        .btn-compras {
+            background-color: #FFF;
             display: flex;
             flex-direction: column;
-            background-color: #f2f2f2;
-            flex: 1;
-            height: 100%;
-            padding: 10px;
+            justify-content: center;
+            align-items: center;
+            position: absolute;
+            gap: 20px;
+            bottom: 0;
+            width: 100%;
+            right: 0;
+            padding: 10px 36px;
+            border-top: 2px solid #e6e6e6;
+
+            .valor {
+                display: flex;
+                align-items: center;
+                justify-content: space-between;
+                width: 100%;
+                text-align: center;
+                padding: 5px 0;
+                border-bottom: 1px solid #e6e6e6;
+            }
+
+
+            button {
+                height: 30px;
+                width: 200px;
+                border: 0;
+                border-radius: 5px;
+                background-color: rgb(105, 105, 243);
+                color: #f2f2f2;
+
+            }
         }
     }
 }
