--- a/src/app/features/pages/home/carrinho/carrinho.component.html
+++ b/src/app/features/pages/home/carrinho/carrinho.component.html
@@ -7,22 +7,13 @@
             <h1>Meu Carrinho</h1>
         </div>
         <div class="container-infor-produto">
-            <section>
-                Colocar informações do produto
-                <div class="th">/</div>
-                <div class="th">/</div>
+            <section class="th">
+                <app-item [produto]="produto"></app-item>
+                <app-item [produto]="produto"></app-item>
+                <app-item [produto]="produto"></app-item>
 
-                <div class="th">/</div>
-                <div class="th">/</div>
-                <div class="th">/</div>
-                <div class="th">/</div>
-                <div class="th">/</div>
-
-                <div class="th">/</div>
-
-                <div class="th">/</div>
-
-                <div class="th">/</div>
+                <app-item [produto]="produto"></app-item>
+                <app-item [produto]="produto"></app-item>
 
 
             </section>
