--- a/src/app/features/pages/home/carrinho/carrinho.component.scss
+++ b/src/app/features/pages/home/carrinho/carrinho.component.scss
@@ -11,10 +11,11 @@
     height: 100%;
 
     .container-int {
+        display: flex;
+        flex-direction: column;
         width: 480px;
         background-color: #FFF;
         height: 100%;
-        position: relative;
 
         .container-header {
             display: flex;
@@ -40,19 +41,17 @@
 
             }
         }
-
         .container-infor-produto {
+                flex: 1;
+                overflow-y: auto;
+                background-color: #FFF;
+                scrollbar-width: thin;
+                scrollbar-color: #0d1d3f;
 
             section {
-
-
                 padding: 10px;
-
                 display: flex;
                 flex-direction: column;
-                background-color: #f2f2f2;
-                overflow-y: scroll;
-
                 .th {
                     margin: 10px 0;
                     width:100%;
@@ -69,12 +68,9 @@
             flex-direction: column;
             justify-content: center;
             align-items: center;
-            position: absolute;
             gap: 20px;
-            bottom: 0;
-            width: 100%;
-            right: 0;
-            padding: 10px 36px;
+            width: 100%;     
+            height: 150px;       padding: 10px 36px;
             border-top: 2px solid #e6e6e6;
 
             .valor {
