--- a/src/app/features/pages/home/header/header.component.scss
+++ b/src/app/features/pages/home/header/header.component.scss
@@ -59,12 +59,15 @@
                 flex: 1;
                 padding: 5px;
                 outline: none;
-                border: 0;
+                border: none;
+
+                
             }
 
             mat-icon {
                 padding: 0 2px;
                 cursor: pointer;
+                color: #000;
             }
         }
 
