--- a/src/app/shared/component/utius/utius.component.scss
+++ b/src/app/shared/component/utius/utius.component.scss
@@ -4,9 +4,13 @@
     align-items: center;
     width:190px;
     height:100%;
-    padding:  5px;
+    padding: 5px 10px;
     border-radius: 3px;
-    // border: 1px solid #e0e0e0;
+     box-shadow: 0 0  5px rgba(0, 0, 0, 0.08);
+
+    border: 1px solid #e0e0e0;
+    
+    
     .ng-descricao{
         width: 100%;
         font-family: var(--font-family);
@@ -18,9 +22,9 @@
     }
     cursor: pointer;
      img{
-        width: 190px;
-        height: 140px;
-        object-fit: cover;
+        width: 100%;
+        height: 150px;
+        object-fit: contain;
     }
     .ng-infor{
         width: 100%;
@@ -32,13 +36,13 @@
                 font-family: var(--font-family);
                 font-size: 15px;
                 font-weight: 500;
-                color:blue ;
+                color:#0d1d3f ;
             }
             small{
                 font-family: var(--font-family);
                 font-size: 14px;
                 font-weight: 400;
-                color:blue ;
+                color:#0d1d3f ;
 
             }
         }
