Organizando pastas v1 antigo home(categorias) v01

--- a/src/app/features/pages/my-account/profileEdition/form-ProfileEdition/form-ProfileEdition.component.html
+++ b/src/app/features/pages/my-account/profileEdition/form-ProfileEdition/form-ProfileEdition.component.html
@@ -135,8 +135,8 @@
                         </div>
 
                         <fieldset class="ng-fieldset">
-                            <legend>Logradouro</legend>
-                            <input type="text" class="ng-input" placeholder="Rua" formControlName="logradouro"
+                            <legend>Rua</legend>
+                            <input type="text" class="ng-input" placeholder="Rua" formControlName="rua"
                                 (keydown.enter)="focarProximoCampo('numeroEndereco')">
                         </fieldset>
                         @if (isRequired('rua')) {
