--- a/src/app/shared/component/mobile-navbar/mobile-navbar.component.html
+++ b/src/app/shared/component/mobile-navbar/mobile-navbar.component.html
@@ -1,21 +1,21 @@
 @if (isVisible) {
   <nav class="mobile-tab-bar" [ngClass]="[isAdmin ? 'ng-isAdmin' : '']">
-    <button (click)="navegar('/home')" [class.active]="router.url === '/home'">
+    <button (click)="navegar('/')" [class.active]="router.url === '/home'">
       <mat-icon>home</mat-icon>
       <span>Home</span>
     </button>
 
-    <button (click)="navegar('/home')" [class.active]="router.url === '/compras'">
+    <button (click)="navegar('/')" [class.active]="router.url === '/compras'">
       <mat-icon>shopping_cart</mat-icon>
       <span>Compras</span>
     </button>
 
-    <button (click)="navegar('/home')" [class.active]="router.url === '/lojas'">
+    <button (click)="navegar('/')" [class.active]="router.url === '/lojas'">
       <mat-icon>store</mat-icon>
       <span>Lojas</span>
     </button>
 
-    <button (click)="navegar('/home')" [class.active]="router.url === '/notificacoes'">
+    <button (click)="navegar('/')" [class.active]="router.url === '/notificacoes'">
       <mat-icon>notifications</mat-icon>
       <span>Notificações</span>
     </button>
