--- a/src/app/shared/component/utius/utius.component.scss
+++ b/src/app/shared/component/utius/utius.component.scss
@@ -1,17 +1,27 @@
-.banner{
+.banner {
     display: flex;
     flex-direction: column;
     align-items: center;
-    width:190px;
-    height:100%;
-    padding: 5px 10px;
-    border-radius: 3px;
-     box-shadow: 0 0  5px rgba(0, 0, 0, 0.08);
+    width: 140px;
+    height: 100%;
+    padding: 6px;
+    border-radius: 8px;
+    box-shadow: 0 0 5px rgba(0, 0, 0, 0.08);
 
     border: 1px solid #e0e0e0;
-    
-    
-    .ng-descricao{
+
+    .ng-infor-id {
+
+        width: 100%;
+        font-family: var(--font-family);
+        word-spacing: normal;
+        word-wrap: break-word;
+        font-size: 14px;
+        padding: 5px 4px;
+        color: #777;
+    }
+
+    .ng-descricao {
         width: 100%;
         font-family: var(--font-family);
         word-spacing: normal;
@@ -20,44 +30,53 @@
         padding: 5px 4px;
         font-weight: 350;
     }
+
     cursor: pointer;
-     img{
+
+    img {
         width: 100%;
-        height: 150px;
+        height: 90px;
         object-fit: contain;
     }
-    .ng-infor{
+
+    .ng-infor {
         width: 100%;
         padding: 0px 4px;
-        .ng-infor-price{
+
+        .ng-infor-price {
             text-align: start;
-            span{
+
+            span {
                 text-align: start;
                 font-family: var(--font-family);
                 font-size: 15px;
                 font-weight: 500;
-                color:#0d1d3f ;
+                color: #0d1d3f;
             }
-            small{
+
+            small {
                 font-family: var(--font-family);
                 font-size: 14px;
                 font-weight: 400;
-                color:#0d1d3f ;
+                color: #0d1d3f;
 
             }
         }
-        .ng-infor-cred{
-            small{
+
+        .ng-infor-cred {
+            small {
                 font-family: var(--font-family);
                 font-size: 12px;
                 font-weight: 400;
-                color:#525151;
+                color: #525151;
 
             }
         }
     }
+
     position: relative;
-    .ng-btn{
+
+    .ng-btn {
         display: flex;
         align-items: center;
         justify-content: center;
@@ -66,7 +85,8 @@
         padding: 5px 0;
         bottom: 0;
         position: absolute;
-        .btn{
+
+        .btn {
             width: 92%;
             padding: 7px 0;
             transition: background-color 0.1s ease;
@@ -74,12 +94,84 @@
             color: #e0e0e0;
             cursor: pointer;
         }
+
         .btn:hover {
             background-color: #0056b3;
-          }
+        }
     }
 }
+
 .banner:hover {
-    transform: translateY(-1px); 
+    transform: translateY(-1px);
     background-color: rgba(240, 240, 240, 0.3);
-  }
+}
+
+
+
+// -----------------------------------------------------------------------------------------------------------//
+@media screen and (min-width:769px) {
+    .banner {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        width: 180px;
+        height: 100%;
+        padding: 8px;
+        box-shadow: 0 0 5px rgba(0, 0, 0, 0.08);
+
+        border: 1px solid #e0e0e0;
+
+        .ng-descricao {
+            width: 100%;
+            font-family: var(--font-family);
+            word-spacing: normal;
+            word-wrap: break-word;
+            font-size: 12px;
+            padding: 5px 4px;
+            font-weight: 350;
+        }
+
+        cursor: pointer;
+
+        img {
+            width: 100%;
+            height: 110px;
+            object-fit: contain;
+        }
+
+        .ng-infor {
+            width: 100%;
+            padding: 0px 4px;
+
+            .ng-infor-price {
+                text-align: start;
+
+                span {
+                    text-align: start;
+                    font-family: var(--font-family);
+                    font-size: 15px;
+                    font-weight: 500;
+                    color: #0d1d3f;
+                }
+
+                small {
+                    font-family: var(--font-family);
+                    font-size: 14px;
+                    font-weight: 400;
+                    color: #0d1d3f;
+
+                }
+            }
+
+            .ng-infor-cred {
+                small {
+                    font-family: var(--font-family);
+                    font-size: 12px;
+                    font-weight: 400;
+                    color: #525151;
+
+                }
+            }
+        }
+    }
+}
