--- a/src/app/features/pages/admin/homeAdmin/carrinho/carrinho.component.html
+++ b/src/app/features/pages/admin/homeAdmin/carrinho/carrinho.component.html
@@ -1,8 +1,8 @@
 <section class="container" (click)="desabiledCar()">
     <div class="container-int" (click)="filhoClicado($event)">
         <div class="container-header">
-            <button class="btn" mat-flat-button>
-                <mat-icon (click)="desabiledCar()">close</mat-icon>
+            <button class="btn" mat-flat-button (click)="desabiledCar()">
+                <mat-icon>close</mat-icon>
             </button>
             <h1>Meu Carrinho</h1>
         </div>
