--- a/src/app/features/pages/admin/produtos/produtosAdmin/produtosAdmin.component.scss
+++ b/src/app/features/pages/admin/produtos/produtosAdmin/produtosAdmin.component.scss
@@ -1,10 +1,15 @@
 .app-content {
     width: 100%;
     padding: 11px;
+    display: flex;
+    flex-direction: column;
+    gap: 30px;
+
 
     .ng-header-content {
         display: flex;
-        justify-content: space-between;
+        flex-direction: column;
+        gap: 15px;
 
         .ng-form form {
             display: flex;
@@ -14,13 +19,14 @@
                 display: flex;
                 align-items: center;
                 background-color: #ffffff;
-                padding: 0 10px;
+                height: 35px;
                 border-radius: 5px;
                 border: 1px solid #cac9c9;
 
                 .ng-input {
                     flex: 1;
-                    padding: 5px;
+                    padding: 8px;
+                    font-size: 16px;
                     outline: none;
                     border: none;
 
@@ -39,8 +45,85 @@
         .header-buttons {
             display: flex;
             gap: 0 15px;
+
+            .ng-btn {
+                display: flex;
+                align-items: center;
+                background: var(--background-color-container);
+                color: #ddd;
+                height: 35px;
+                padding: 0 8px;
+                gap: 0 5px;
+                border-radius: 5px;
+                border: 1px solid #ccc;
+            }
         }
 
     }
 
+    .ng-todosProdutos {
+        display: flex;
+        justify-content: space-around;
+        flex-wrap: wrap;
+        gap: 15px;
+    }
+
+}
+
+
+// -----------------------------------------------------------------------------------------------------------//
+@media screen and (min-width:769px) {
+    .app-content {
+        width: 100%;
+        padding: 11px;
+        display: flex;
+        flex-direction: column;
+        gap: 20px;
+
+
+        .ng-header-content {
+            display: flex;
+            flex-direction: row;
+            gap: 15px;
+
+            .ng-form form {
+                display: flex;
+
+                .search {
+                    width: 400px;
+                    display: flex;
+                    align-items: center;
+                    background-color: #ffffff;
+                    height: 35px;
+                    border-radius: 5px;
+                    border: 1px solid #cac9c9;
+
+                    .ng-input {
+                        flex: 1;
+                        padding: 8px;
+                        font-size: 16px;
+                        outline: none;
+                        border: none;
+
+
+                    }
+
+                    mat-icon {
+                        padding: 0 2px;
+                        cursor: pointer;
+                        color: #000;
+                    }
+                }
+
+            }
+        }
+
+        .ng-todosProdutos {
+            display: flex;
+            justify-content: flex-start;
+            flex-wrap: wrap;
+            gap: 20px;
+        }
+
+    }
 }
