--- a/src/app/features/pages/admin/produtos/create-product/create-product.component.html
+++ b/src/app/features/pages/admin/produtos/create-product/create-product.component.html
@@ -13,6 +13,8 @@
             <section class="th">
                 fdsfdf
             </section>
+            <app-drop (emiter)="select($event)"></app-drop>
+            
         </div>
     </div>
 </section>
